# practic-FastAPI

./: .gitignore  database.py  main.py  models.py  pyproject.toml  schema.py
alembic/: env.py
alembic/versions/: 2025_07_16_1041-87fd79c77eb9_create_library_table.py  2025_07_16_1110-e1eeb5637cf5_create_users_table.py  2025_07_16_1131-48a89d8264e2_create_post_table.py  2025_07_16_1321-8324859c7024_create_profile_table.py  2025_07_19_1128-8f7771105cd6_create_all_table.py  2025_07_20_1013-8d6baf715997_create_all_table.py  2025_07_21_2151-dc1d93375756_create_all_table.py  2025_07_22_1834-8fae8f4bc2ae_add_column_count_order_book_association.py  2025_07_22_2015-09312d7cfc26_add_column_unit_price_order_book_.py
app/: main.py  models.py  schema.py
library_book/app/: main.py  models.py
library_project/: library.db  main.py
library_project/app/: main.py  models.py
library_project/app/api/: __init__.py  author_app.py  book_app.py
library_project/app/files_crud/: author_crud.py  book_crud.py  crud.py  dependencies.py
library_project/app/models_file/: models.py
library_project/app/schemas/: author_schema.py  book_schema.py  create_new_author.py  create_new_book.py
library_project/core_app/: config_db.py
library_project/core_app/models/: __init__.py  author.py  book.py  book_and_author.py  db_helpers.py  mixins.py  mixins_author.py  order.py  order_book_association.py  post.py  profile.py  user.py
library_project/database/: config.py
