[project]
name = "library_project"
version = "0.1.0"
description = ""
authors = [
    {name = "Vitaly Zakharov",email = "zaharof1995@yandex.ru"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.0,<0.117.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "aiosqlite (>=0.21.0,<0.22.0)"
]


[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
